# adventofcode_2023

./: .gitignore  LICENSE.txt  README.md  add-makefiles.sh  notes.md
day01/: Makefile  day01.sml  input.txt
day02/: Makefile  day02.cabal  day02.hs  input.txt
day03/: Makefile  day03.cabal  day03.hs  input.txt
day04/: Makefile  day04.cabal  day04.fsx  day04.hs  input.txt
day05/: Makefile  day05.cabal  day05.hs  input.txt
day06/: Makefile  input.txt
day06/src/: main.rs
day07/: Makefile  day07.cabal  day07.hs  input.txt
day08/: Makefile  day08.cabal  day08.hs  input.txt
day09/: Makefile  day09.cabal  day09.hs  input.txt
day09/src/: main.rs
day10/: Makefile  day10.cabal  day10.hs  input.txt
day11/: Makefile  day11.cabal  day11.hs  input.txt
day12/: Makefile  day12.cabal  day12.hs  input.txt
day13/: Makefile  day13.cabal  day13.hs  input.txt
day14/: Makefile  day14.cabal  day14.hs  input.txt
day15/: Makefile  day15.cabal  day15.hs  input.txt
day16/: Makefile  day16.cabal  day16.hs  input.txt
day17/: .gitignore  Makefile  day17.cabal  day17.hs  input.txt
day18/: Makefile  day18.cabal  day18.hs  input.txt
day19/: Makefile  day19.cabal  day19.hs  input.txt
day20/: Makefile  day20.cabal  day20.hs  input.txt
day21/: Makefile  day21.cabal  day21.hs  input.txt
day22/: .gitignore  Makefile  cuboids.txt  day22.cabal  day22.hs  input.txt  viewcuboids.py
day23/: Makefile  day23.cabal  day23.hs  input.txt
day24/: Makefile  cabal.project  day24.cabal  day24.hs  input.txt
day25/: Makefile  day25.cabal  day25.hs  input.txt
