cabal-version:      3.6
name:               day03
version:            0.1.0.0

license:            MIT
license-file:       ../LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day03
    main-is: day03.hs

    build-depends:    base >= 4 && < 5,
                      containers,
                      split

    hs-source-dirs:   .
    default-language: Haskell2010
