cabal-version:      3.6
name:               day12
version:            0.1.0.0

license:            MIT
license-file:       ../LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day12
    main-is: day12.hs

    build-depends:    base >= 4 && < 5,
                      containers,
                      split,
                      uglymemo

    hs-source-dirs:   .
    default-language: GHC2021
