cabal-version:      3.6
name:               day12
version:            0.1.0.0

license:            MIT
license-file:       ../LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day12
    main-is: day12.hs

    build-depends:    base >= 4 && < 5,
                      containers,
                      monad-par,
                      mtl >= 2.3.1,
                      monad-memo,
                      split,
                      vector >= 0.13

    hs-source-dirs:   .
    default-language: GHC2021
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N