cabal-version:      3.6
name:               day14
version:            0.1.0.0

license:            MIT
license-file:       ../LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day14
    main-is: day14.hs

    build-depends:    base >= 4 && < 5,
                      containers,
                      split

    hs-source-dirs:   .
    default-language: GHC2021
    -- Add -threaded when using parallelism
    ghc-options:      -O2