cabal-version:      3.6
name:               day15
version:            0.1.0.0

license:            MIT
license-file:       ../LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day15
    main-is: day15.hs

    build-depends:    base >= 4 && < 5,
                      containers,
                      split,
                      vector

    hs-source-dirs:   .
    default-language: GHC2021
    -- Add -threaded when using parallelism
    ghc-options:      -O2