cabal-version:      3.6
name:               day16
version:            0.1.0.0

license:            MIT
license-file:       ../LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day16
    main-is: day16.hs

    build-depends:    base >= 4 && < 5,
                      containers,
                      split,
                      monad-par,
                      hashable,
                      unordered-containers

    hs-source-dirs:   .
    default-language: GHC2021
    -- Add -threaded when using parallelism
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N