cabal-version:      3.6
name:               day17
version:            0.1.0.0

license:            MIT
license-file:       ../LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day17
    main-is: day17.hs

    build-depends:
                        array >= 0.5.6.0
                  , base >= 4 && < 5
                  , containers
                  , hashable >= 1.4.3.0
                  , psqueues
                  , search-algorithms
                  , split
                  , unordered-containers >= 0.2.19.1


    hs-source-dirs:   .
    default-language: GHC2021
    ghc-options:      -O2
    -- -prof -fprof-late -rtsopts
    -- -threaded -rtsopts -with-rtsopts=-N
