cabal-version:      3.6
name:               day20
version:            0.1.0.0

license:            MIT
license-file:       ../LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day20
    main-is: day20.hs

    build-depends:    base >= 4 && < 5,
                      containers,
                      split,
                      vector,
                      bitvec

    hs-source-dirs:   .
    default-language: GHC2021
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N