cabal-version:      3.6
name:               day23
version:            0.1.0.0

license:            MIT
license-file:       ../LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day23
    main-is: day23.hs

    build-depends:    base >= 4 && < 5,
                      containers,
                      hashable >= 1.4.3.0,
                      bitvec >= 1.1.5.0,
                      mtl >= 2.3.1,
                      unordered-containers,
                      vector >= 0.13.0.0

    hs-source-dirs:   .
    default-language: GHC2021
    ghc-options:      -O2