cabal-version:      3.6
name:               day25
version:            0.1.0.0

license:            MIT
license-file:       ../LICENSE
author:             Ken Friis Larsen
maintainer:         ken@friislarsen.net

copyright: Ken Friis Larsen <ken@friislarsen.net>

executable day25
    main-is: day25.hs

    build-depends:    base >= 4 && < 5,
                      containers,
                      monad-par,
                      process >= 1.6.18.0,
                      pretty-simple,
                      search-algorithms,
                      vector



    hs-source-dirs:   .
    default-language: GHC2021
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N